fix code and remove extra margin padding

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 * {
   padding: 0;
   margin: 0;
@@ -6,67 +5,69 @@
   font-family: 'DM Sans';
 }
 
-  .container {
-    background-color: #EEF5FF; 
-    margin: auto;  
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100vh; 
-  }
+.container {
+  background-color: #EEF5FF;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
 
-  .card {
-    display: grid;
-    box-shadow: 0px 4px 10px rgba(160, 160, 160, 0.25);
-    border-radius: 20px;
-    justify-content: center;
-    max-width: 800px;
-    grid-template-columns: 1fr 1fr;
-    margin: 30px;
-  }
-
-  .one {
-  background: linear-gradient(180deg, #6542FD 0%, #322CE9 100%);
-  border-radius: 10px 0 0 10px;  
+.card {
+  display: grid;
   box-shadow: 0px 4px 10px rgba(160, 160, 160, 0.25);
-  padding:10px ;
-  
-  }
+  border-radius: 20px;
+  justify-content: center;
+  max-width: 800px;
+  grid-template-columns: 1fr 1fr;
+  margin: 30px;
+}
 
-  .para {
+.one {
+  background: linear-gradient(180deg, #6542FD 0%, #322CE9 100%);
+  border-radius: 10px 0 0 10px;
+  box-shadow: 0px 4px 10px rgba(160, 160, 160, 0.25);
+  padding: 10px;
+
+}
+
+.para {
   display: flex;
   justify-content: center;
   color: #B6A6FF;
-  font-size: 20px;  
+  font-size: 20px;
   margin-top: 40px;
-  }
+  height: 36px;
+}
 
 
-  .para:hover {
+.para:hover {
   text-decoration: underline;
-  text-decoration-color:  #46a5ce;
+  text-decoration-color: #46a5ce;
   text-decoration-thickness: 2px;
 }
 
-  .number {
+.number {
   border-radius: 50%;
   background-color: rgb(0, 55, 255);
   width: 9rem;
   padding: 2rem;
-  margin:  20px auto;
+  margin: 20px auto;
+  height: 9rem;
   margin-bottom: 0;
   background: linear-gradient(180deg, #4A24CC 0%, #322CE9 100%);
 }
 
 .number:hover {
-  text-decoration-color:  #46a5ce;
+  text-decoration-color: #46a5ce;
   border: 1px solid cyan;
 }
 
 .number h1 {
   color: white;
-  font-size: 50px;  
+  font-size: 50px;
   align-items: center;
   justify-content: center;
   display: flex;
@@ -90,31 +91,31 @@
   display: flex;
   justify-content: center;
   padding: 20px 0;
-  }
+}
 
-  .grate h1:hover {
+.grate h1:hover {
   text-decoration: underline;
   text-decoration-color: cyan;
 }
 
-.grate p {  
-color:#B6A6FF;
-font-size: 20px;
-text-align: center;
-margin: 0 20px 10px 20px;
-justify-content: center;
-align-items: center;
+.grate p {
+  color: #B6A6FF;
+  font-size: 20px;
+  text-align: center;
+  margin: 0 20px 10px 20px;
+  justify-content: center;
+  align-items: center;
 }
 
 .grate p:hover {
   text-decoration: underline;
-  text-decoration-color:  #46a5ce;
+  text-decoration-color: #46a5ce;
   text-decoration-thickness: 2px;
 }
 
-.two { 
+.two {
   background-color: white;
-  border-radius: 0 10px 10px 0;  
+  border-radius: 0 10px 10px 0;
   box-shadow: 0px 4px 10px rgba(160, 160, 160, 0.25);
 
 }
@@ -122,7 +123,11 @@ align-items: center;
 .summ {
   text-align: center;
   margin: 40px;
-  font-size: 25px; 
+  font-size: 25px;
+  width: 187px;
+  top: 218px;
+  line-height: 50px;
+  font-weight: 700;
 }
 
 .summ:hover {
@@ -133,17 +138,18 @@ align-items: center;
 
 .reaction {
   display: flex;
+  font-size: 20px;
   justify-content: space-around;
-  margin-top: 20px;
   background: #FFF7F5;
   border-radius: 5px;
-  margin: 20px auto;
+  margin: 15px 30px;
 }
 
 .reaction h1 {
-  color:#FF5E69;
+  color: #FF5E69;
   font-size: 18px;
 }
+
 
 .reaction h1:hover {
   text-decoration: underline;
@@ -153,16 +159,17 @@ align-items: center;
 
 .memory {
   display: flex;
-  justify-content: space-around;  
+  justify-content: space-around;
   background: #FDFDF1;
   border-radius: 5px;
   margin: 20px auto;
-  color: #E6D287;;
+  color: #E6D287;
+  border-radius: 5px;
+  margin: 15px 30px;
 }
 
 .memory h1 {
   font-size: 18px;
-  line-height: 28px;
 }
 
 .memory h1:hover {
@@ -181,35 +188,45 @@ align-items: center;
   justify-content: space-around;
   background: #F2FBFA;
   border-radius: 5px;
+  height: 25px;
+  align-items: center;
+  margin: 5px 30px;
+
 }
 
 .virbal h1 {
-  color:#3DD1B6;
+  color: #3DD1B6;
   font-size: 18px;
   font-style: normal;
+
 }
 
-  .virbal h1:hover {
+.virbal h1:hover {
   text-decoration: underline;
   text-decoration-color: skyblue;
   text-decoration-thickness: 2px;
-
 }
-  .virbal p {
-    margin-top: 7px;
- }
 
-  .visual {
+.virbal p {
+  margin-top: 7px;
+  height: 25px;
+  width: 66px;
+  top: 620px;
+}
+
+.visual {
   display: flex;
   justify-content: space-around;
   background: #F3F3FF;
   border-radius: 5px;
   margin: 20px auto;
   font-size: 20px;
+  align-items: center;
+  margin: 15px 30px;
 }
 
 .visual h1 {
-  color:#403E7F;
+  color: #403E7F;
   font-family: 'DM Sans';
   font-size: 18px;
   font-style: normal;
@@ -223,12 +240,15 @@ align-items: center;
 
 .visual p {
   margin-top: 7px;
-} 
+  height: 25px;
+  width: 66px;
+  top: 620px;
+}
 
 .btn {
   margin: 40px;
   padding: 10px;
-  background-color:#303C58;
+  background-color: #303C58;
   display: flex;
   justify-content: center;
   color: white;
@@ -241,34 +261,44 @@ align-items: center;
   background-color: #303c58ee;
 }
 
-  img {
+img {
   object-fit: contain;
-} 
+  height: 15px;
+  width: 20px;
+  align-items: center;
+}
 
- .reactionimg {
-    display: flex;
-    gap: 10px;
+.reactionimg {
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 
 .img2 {
   display: flex;
   gap: 10px;
-} 
+  align-items: center;
+
+}
 
 .img3 {
   display: flex;
   gap: 10px;
-} 
+  align-items: center;
+  margin-left: -6px;
+}
 
 .img4 {
   display: flex;
   gap: 10px;
+  align-items: center;
 }
 
 .span {
-  color:#303C58;
-  font-size: 20px;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;  
+  color: #303C58;
+  font-size: 17px;
+  line-height: 30px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .span:hover {
@@ -278,7 +308,7 @@ align-items: center;
 }
 
 .span1 {
-  font-size: 20px;
+  font-size: 17px;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color: #858484;
 }
@@ -289,14 +319,10 @@ align-items: center;
   text-decoration-thickness: 2px;
 }
 
-@media (max-width:1024px){
-  .card{
+@media (max-width:1024px) {
+  .card {
     display: flex;
     flex-direction: column;
   }
 
 }
-
-
-
-
